--- a/css/style.css
+++ b/css/style.css
@@ -26,17 +26,17 @@ html {
 }
 
 .bgimg-1 {
-    background-image: url('../jpg/1.webp');
+    background-image: url('./jpg/1.webp');
     min-height: 100%;
 }
 
 .bgimg-2 {
-    background-image: url("../jpg/2.webp");
+    background-image: url("./jpg/2.webp");
     min-height: 400px;
 }
 
 .bgimg-3 {
-    background-image: url("../jpg/3.webp");
+    background-image: url("./jpg/3.webp");
     min-height: 400px;
 }
 
